drobo-utils (9999) stable; urgency=low
 -- Peter Silva <Peter.A.Silva@gmail.com>  Mon, 7 Feb 2010 21:22:31 -0500

drobo-utils (0.6.2.2) stable; urgency=low
   * fix for Redhat/python 2.4 wanting to partition everything!
 -- Peter Silva <Peter.A.Silva@gmail.com>  Mon, 7 Feb 2010 21:22:31 -0500

drobo-utils (0.6.1) stable; urgency=low

  * DroboPro identification fix by spobole,
  * parted fix from Patrick Bills
  * Looked at newly released DMIP. Found option2 commands for settings.
  * Options2 query/set implemented (but cannot test for DroboPRO)
  * migrated source code managers from subversion to git
  * minor: consistency of default location to look for fw between lib and gui.
  * fixed that inability to read lun size on old firmwares crashed GUI.
    GUI now works all the way back to the beginning.


 -- Peter Silva <Peter.A.Silva@gmail.com>  Mon, 12 Oct 2009 21:22:31 -0500

drobo-utils (0.6.0) stable; urgency=high

  * Major: GUI heavily re-vamped.  Behaves better.
  * Major: DroboPRO support added (thanks to lemonizer on the google group!)
  * Major: GUI gets online documentation.
  * GUI: layouts replaced fixed dimensions.
  * GUI: added Rename support
  * GUI: added Load firmware button
  * GUI: Show Diagnostics (equiv. to diagprint.)
  * GUI: Name display to main display. Easier to tell which Drobo is which.
  * GUI: added mount point display to space used tool tip.
  * api: added ability to detect un-documented feature bit settings.
  * ddiag.c becomes drobom diagprint
  * catlee fixes the packaging again.

 -- Peter Silva <Peter.A.Silva@gmail.com>  Sat, 31 Jan 2009 15:36:17 -0500

drobo-utils (0.5.0-2) unstable; urgency=low

  * replaced DroboDMP C extension by DroboIOctl python class.  no need
    for architecture dependent packages. this also means you can just 
    try it out straight after download, no need to install anything.
    much easier. fewer build dependencies as well.
  * device detection completely re-written.  It works better now.